Introduce JobAssertions (#1982)
GitOrigin-RevId: 5d022598cc6d47989ce5a90110e592e5532c04a4